--- a/.github/workflows/reportcard.yaml
+++ b/.github/workflows/reportcard.yaml
@@ -2,6 +2,7 @@ name: Reportcard
 on: [push]
 jobs:
   reportcard:
+    name: Reportcard
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
